--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <nav class="navbar navbar-expand-lg navbar-light py-4">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <h3>SB-UI KIT PRO</h3>
+                <h3 class="pt-1 px-2">SB-UI KIT PRO</h3>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
@@ -91,11 +91,11 @@
                         <div class="dropdown-menu py-4 px-2" aria-labelledby="navbarDropdown">
                             <div class="row px-3">
                                 <div class="col-lg-6">
-                                    <h6 class="text-primary">APPLICATIONS</h6>
+                                    <h6 class="text-primary">Applicatons</h6>
                                     <a href=""> Mobile App</a>
 
                                     <a href=""> Desktop App </a>
-                                    <h6 class="text-primary "> BUSINESS</h6>
+                                    <h6 class="text-primary "> Business</h6>
                                     <a href=" ">  Multipurpose</a>
                                     <a href=" ">  Agency</a>
                                     <a href=" ">  Press</a>
@@ -103,15 +103,15 @@
                                     <a href=" ">  Rental</a>
                                     <a href="">Real Estate</a>
                                     <a href="">Classifieds</a>
-                                    <h6 class="text-primary "> LEAD GENERATION</h6>
+                                    <h6 class="text-primary "> Lead Generation</h6>
                                     <a href=""> Lead Capture</a>
                                 </div>
                                 <div class="col-lg-6">
 
-                                    <h6 class="text-primary"> PERSONAL</h6>
+                                    <h6 class="text-primary"> Personal</h6>
                                     <a href=""> Resume</a>
                                     <a href=""> Portfolio </a>
-                                    <h6 class="text-primary "> HEADER STYLES</h6>
+                                    <h6 class="text-primary "> Header Styles</h6>
                                     <a href=" ">  Basic</a>
                                     <a href=" "> Basic (Signup)</a>
                                     <a href=" ">  Graphic</a>
@@ -133,11 +133,11 @@
                         <div class="dropdown-menu py-3 px-2" aria-labelledby="navbarDropdown">
                             <div class="row px-3">
                                 <div class="col-lg-6">
-                                    <h6 class="text-primary">APPLICATIONS</h6>
+                                    <h6 class="text-primary">Applicatons</h6>
                                     <a href=""> Mobile App</a>
 
                                     <a href=""> Desktop App </a>
-                                    <h6 class="text-primary "> BUSINESS</h6>
+                                    <h6 class="text-primary "> Business</h6>
                                     <a href=" ">  Multipurpose</a>
                                     <a href=" ">  Agency</a>
                                     <a href=" ">  Press</a>
@@ -145,15 +145,15 @@
                                     <a href=" ">  Rental</a>
                                     <a href="">Real Estate</a>
                                     <a href="">Classifieds</a>
-                                    <h6 class="text-primary "> LEAD GENERATION</h6>
+                                    <h6 class="text-primary "> Lead Generation</h6>
                                     <a href=""> Lead Capture</a>
                                 </div>
                                 <div class="col-lg-6">
 
-                                    <h6 class="text-primary"> PERSONAL</h6>
+                                    <h6 class="text-primary"> Personal</h6>
                                     <a href=""> Resume</a>
                                     <a href=""> Portfolio </a>
-                                    <h6 class="text-primary "> HEADER STYLES</h6>
+                                    <h6 class="text-primary "> Header Styles</h6>
                                     <a href=" ">  Basic</a>
                                     <a href=" "> Basic (Signup)</a>
                                     <a href=" ">  Graphic</a>
@@ -299,7 +299,7 @@
                                 <p class="mb-0 ">Some Quick</p>
                             </div>
                             <div class="overlay ">
-                                <p>BOOK</p>
+                                <p>FLOWER MUG</p>
                             </div>
                         </div>
                     </div>
@@ -310,7 +310,7 @@
                                 <p class="mb-0 ">Some Quick</p>
                             </div>
                             <div class="overlay ">
-                                <p>BOOK</p>
+                                <p>CACTUS DISPLAY</p>
                             </div>
                         </div>
                     </div>
@@ -326,7 +326,7 @@
                                 <p class="mb-0 ">Some Quick</p>
                             </div>
                             <div class="overlay ">
-                                <p>BOOK</p>
+                                <p>READING</p>
                             </div>
                         </div>
                     </div>
@@ -337,7 +337,7 @@
                                 <p class="mb-0 ">Some Quick</p>
                             </div>
                             <div class="overlay ">
-                                <p>BOOK</p>
+                                <p>WHITE BOOK</p>
                             </div>
                         </div>
                     </div>
@@ -348,7 +348,7 @@
                                 <p class="mb-0 ">Some Quick</p>
                             </div>
                             <div class="overlay ">
-                                <p>BOOK</p>
+                                <p>PHOTO FACE</p>
                             </div>
                         </div>
                     </div>
@@ -364,7 +364,7 @@
                                 <p class="mb-0 ">Some Quick</p>
                             </div>
                             <div class="overlay ">
-                                <p>BOOK</p>
+                                <p>CATALOGUE</p>
                             </div>
                         </div>
                     </div>
@@ -375,7 +375,7 @@
                                 <p class="mb-0 ">Some Quick</p>
                             </div>
                             <div class="overlay ">
-                                <p>BOOK</p>
+                                <p>NOTEBOOK</p>
                             </div>
                         </div>
                     </div>
@@ -386,7 +386,7 @@
                                 <p class="mb-0 ">Some Quick</p>
                             </div>
                             <div class="overlay ">
-                                <p>BOOK</p>
+                                <p>BOOK STAND</p>
                             </div>
                         </div>
                     </div>
